# rssphere

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  db.sqlite  mkdocs.yml  pyproject.toml
src/rssphere/: __init__.py
src/rssphere/database/: ddl.sql  sqlite_handler.py
src/rssphere/scraper/: config.toml  scraper.py
tests/: test_sqlite_handler.py  test_stub.py
